project-1/node-todo-cicd/bluegreen/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use Let's Encrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - node.hicloud.co.in
    secretName: nodejs-tls-secret  # Cert-Manager will manage this
  rules:
  - host: node.hicloud.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-svc
            port:
              number: 8000
      - path: /nginx-svc
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
